[package]
name = "triemap"
version = "0.0.1"
authors = ["Ekin Igdir"]
edition = "2024"
description = "A trie-based map implementation in Rust"
repository = "https://github.com/ekinimo/triemap"
documentation = "https://ekinimo.github.io/triemap/triemap/index.html"
readme = "README.md"
license = "MIT"
keywords = ["trie", "map", "data-structure", "prefix", "collection"]
categories = ["data-structures"]

[dependencies]
