[package]
name = "triemap"
version = "0.0.1"
authors = ["Ekin Igdir"]
edition = "2024"
description = "A trie-based map implementation in Rust"
repository = "https://github.com/ekinimo/triemap"
documentation = "https://ekinimo.github.io/triemap"
readme = "README.md"
license = "MIT"
keywords = ["trie", "map", "data-structure", "prefix", "collection"]
categories = ["data-structures"]

[dependencies]

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "triemap_benchmarks"
harness = false


[[bench]]
name = "triemap_benchmarks_3"
harness = false
